--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -77,6 +77,10 @@
                         <i class="fas fa-folder-open"></i>
                         Load Game
                     </button>
+                    <button id="cheat-btn" class="cheat-btn">
+                        <i class="fas fa-magic"></i>
+                        Cheat
+                    </button>
                 </div>
             </div>
 
